--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,20 @@ matrix:
     - scala: 2.13.0
       jdk: openjdk11
 
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - rm -f $HOME/.ivy2/.sbt.ivy.lock
+  - find $HOME/.sbt -name "*.lock" -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -delete
+
 cache:
   directories:
-    - $HOME/.sbt/boot
+    - $HOME/.cache/coursier
     - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot
 
 script:
   - sbt ++$TRAVIS_SCALA_VERSION clean scalafmtSbtCheck scalafmtCheck test:scalafmtCheck coverage test coverageReport coverageAggregate
-  # Tricks to avoid unnecessary cache updates
-  - find $HOME/.sbt -name "*.lock" -delete
-  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
