--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,9 @@ jobs:
       - name: cache SBT
         uses: coursier/cache-action@v6
       - name: Java 11 setup
-        uses: actions/setup-java@v2
+        uses: olafurpg/setup-scala@v10
         with:
-          distribution: temurin
-          java-version: 11
+          java-version: 1.11.0
       - uses: olafurpg/setup-gpg@v3
       - name: Publish ${{ github.ref }}
         run: sbt ci-release
