scalacheck scala3 cross build

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,5 @@
 version = "3.5.8"
-runner.dialect = scala213source3
+runner.dialect = scala3
 maxColumn = 100
 
 binPack.literalArgumentLists = true
@@ -27,4 +27,10 @@ rewrite {
   ]
   redundantBraces.generalExpressions = false
   redundantBraces.maxLines = 1
+}
+
+fileOverride {
+  "glob:**/scala-2.*/**" {
+    runner.dialect = scala213
+  }
 }
