cats scala3 cross build

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,5 @@
 version = "3.5.8"
-runner.dialect = scala3
+runner.dialect = scala213source3
 maxColumn = 100
 
 binPack.literalArgumentLists = true
@@ -30,7 +30,7 @@ rewrite {
 }
 
 fileOverride {
-  "glob:**/scala-2.*/**" {
-    runner.dialect = scala213
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
   }
 }
