--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -28,3 +28,9 @@ rewrite {
   redundantBraces.generalExpressions = false
   redundantBraces.maxLines = 1
 }
+
+fileOverride {
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
