--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,17 +38,17 @@ jobs:
           - 2.12.16
           - 2.13.8
 
-#  scala3:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Cache sbt
-#        uses: coursier/cache-action@v5
-#      - name: Java ${{matrix.java}} setup
-#        uses: olafurpg/setup-scala@v10
-#        with:
-#          java-version: 1.11.0
-#      - run: sbt "++3.1.2! $module/test"
+  scala3:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache sbt
+        uses: coursier/cache-action@v5
+      - name: Java ${{matrix.java}} setup
+        uses: olafurpg/setup-scala@v10
+        with:
+          java-version: 1.11.0
+      - run: sbt "++3.1.2! shared/test test/test"
 
   avro:
     runs-on: ubuntu-latest
