Update scala-steward updates.ignore rules

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,4 +1,4 @@
 updates.ignore = [
-  { groupId = "org.apache.avro" },
-  { groupId = "com.google.guava" }
+  { groupId = "org.apache.avro" }, # we test with multiple avro versions
+  { groupId = "org.neo4j.driver" } # v5 only supports java 17
 ]
