--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: 1.11.0
       - uses: olafurpg/setup-gpg@v3
       - name: Publish ${{ github.ref }}
-        run: sbt ci-release
+        run: sbt versionCheck ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
