--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ name: Continuous Integration
 
 on:
   pull_request:
-    branches: ['**', '!update/**', '!pr/**']
+    branches: [main]
   push:
-    branches: ['**', '!update/**', '!pr/**']
+    branches: [main]
     tags: [v*]
 
 env:
@@ -29,32 +29,16 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.10, 2.12.17]
-        java: [corretto@8, corretto@11]
+        java: [corretto@11, corretto@8]
         exclude:
           - scala: 2.12.17
-            java: corretto@11
+            java: corretto@8
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Download Java (corretto@8)
-        id: download-java-corretto-8
-        if: matrix.java == 'corretto@8'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: corretto
-          java-version: 8
-
-      - name: Setup Java (corretto@8)
-        if: matrix.java == 'corretto@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 8
-          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
 
       - name: Download Java (corretto@11)
         id: download-java-corretto-11
@@ -72,6 +56,22 @@ jobs:
           java-version: 11
           jdkFile: ${{ steps.download-java-corretto-11.outputs.jdkFile }}
 
+      - name: Download Java (corretto@8)
+        id: download-java-corretto-8
+        if: matrix.java == 'corretto@8'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: corretto
+          java-version: 8
+
+      - name: Setup Java (corretto@8)
+        if: matrix.java == 'corretto@8'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 8
+          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
+
       - name: Cache sbt
         uses: actions/cache@v3
         with:
@@ -87,13 +87,16 @@ jobs:
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
 
-      - if: matrix.scala == '2.13.10' && matrix.java == 'corretto@11'
+      - name: Build project
+        if: matrix.scala == '2.13.10' && matrix.java == 'corretto@11'
         run: sbt '++ ${{ matrix.scala }}' coverage test coverageAggregate
 
-      - if: matrix.scala == '2.13.10' && matrix.java == 'corretto@11'
+      - name: Upload coverage report
+        if: matrix.scala == '2.13.10' && matrix.java == 'corretto@11'
         run: 'bash <(curl -s https://codecov.io/bash)'
 
-      - if: '!(matrix.scala == ''2.13.10'' && matrix.java == ''corretto@11'')'
+      - name: Build project
+        if: '!(matrix.scala == ''2.13.10'' && matrix.java == ''corretto@11'')'
         run: sbt '++ ${{ matrix.scala }}' test
 
       - name: Make target directories
@@ -119,29 +122,13 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.10]
-        java: [corretto@8]
+        java: [corretto@11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Download Java (corretto@8)
-        id: download-java-corretto-8
-        if: matrix.java == 'corretto@8'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: corretto
-          java-version: 8
-
-      - name: Setup Java (corretto@8)
-        if: matrix.java == 'corretto@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 8
-          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
 
       - name: Download Java (corretto@11)
         id: download-java-corretto-11
@@ -158,6 +145,22 @@ jobs:
           distribution: jdkfile
           java-version: 11
           jdkFile: ${{ steps.download-java-corretto-11.outputs.jdkFile }}
+
+      - name: Download Java (corretto@8)
+        id: download-java-corretto-8
+        if: matrix.java == 'corretto@8'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: corretto
+          java-version: 8
+
+      - name: Setup Java (corretto@8)
+        if: matrix.java == 'corretto@8'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 8
+          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v3
@@ -219,22 +222,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download Java (corretto@8)
-        id: download-java-corretto-8
-        if: matrix.java == 'corretto@8'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: corretto
-          java-version: 8
-
-      - name: Setup Java (corretto@8)
-        if: matrix.java == 'corretto@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 8
-          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
-
       - name: Download Java (corretto@11)
         id: download-java-corretto-11
         if: matrix.java == 'corretto@11'
@@ -251,6 +238,22 @@ jobs:
           java-version: 11
           jdkFile: ${{ steps.download-java-corretto-11.outputs.jdkFile }}
 
+      - name: Download Java (corretto@8)
+        id: download-java-corretto-8
+        if: matrix.java == 'corretto@8'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: corretto
+          java-version: 8
+
+      - name: Setup Java (corretto@8)
+        if: matrix.java == 'corretto@8'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 8
+          jdkFile: ${{ steps.download-java-corretto-8.outputs.jdkFile }}
+
       - name: Cache sbt
         uses: actions/cache@v3
         with:
@@ -263,6 +266,7 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
-      - env:
+      - name: Build project
+        env:
           JAVA_OPTS: '-Davro.version=1.8.2'
         run: sbt '++ ${{ matrix.scala }}' avro/test
