Reduce PR frequency for google-api-services-bigquery

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -2,3 +2,11 @@ updates.ignore = [
   { groupId = "org.apache.avro" }, # we test with multiple avro versions
   { groupId = "org.neo4j.driver" } # v5 only supports java 17
 ]
+
+dependencyOverrides = [
+  # version includes revision date. reduce PR frequency
+  {
+    dependency = { groupId = "com.google.apis", artifactId = "google-api-services-bigquery" },
+    pullRequests = { frequency = "1 month" },
+  }
+]
