Move frequency to cron sytax
scala-steward validate-repo-config failed with previous syntax.
Use cron syntax for every month

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -7,6 +7,6 @@ dependencyOverrides = [
   # version includes revision date. reduce PR frequency
   {
     dependency = { groupId = "com.google.apis", artifactId = "google-api-services-bigquery" },
-    pullRequests = { frequency = "1 month" },
+    pullRequests = { frequency = "0 0 1 * ?" },
   }
 ]
