--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13, 2.12]
+        scala: [3, 2.13, 2.12]
         java: [corretto@17, corretto@11]
         exclude:
+          - scala: 3
+            java: corretto@11
           - scala: 2.12
             java: corretto@11
     runs-on: ${{ matrix.os }}
@@ -138,6 +140,16 @@ jobs:
         if: matrix.java == 'corretto@11' && steps.setup-java-corretto-11.outputs.cache-hit == 'false'
         run: sbt +update
 
+      - name: Download target directories (3)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3
+
+      - name: Inflate target directories (3)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (2.13)
         uses: actions/download-artifact@v3
         with:
@@ -225,7 +237,7 @@ jobs:
       - name: Submit Dependencies
         uses: scalacenter/sbt-dependency-submission@v2
         with:
-          modules-ignore: test_2.13 test_2.12 magnolify_2.13 magnolify_2.12
+          modules-ignore: test_3 test_2.13 test_2.12 magnolify_3 magnolify_2.13 magnolify_2.12
           configs-ignore: test scala-tool scala-doc-tool test-internal
 
   validate-steward:
