--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,21 +73,25 @@ jobs:
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
 
-      - name: Build project
-        if: matrix.scala == '2.13' && matrix.java == 'corretto@11'
-        run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' coverage test coverageAggregate
+      - name: Check headers and formatting
+        if: matrix.java == 'corretto@17' && matrix.os == 'ubuntu-latest'
+        run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' headerCheckAll scalafmtCheckAll 'project /' scalafmtSbtCheck
 
-      - name: Upload coverage report
-        if: matrix.scala == '2.13' && matrix.java == 'corretto@11'
-        run: 'bash <(curl -s https://codecov.io/bash)'
-
-      - name: Build project
-        if: '!(matrix.scala == ''2.13'' && matrix.java == ''corretto@11'' || matrix.scala == ''3'')'
+      - name: Test
+        if: '!(matrix.scala == ''3'')'
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' test
 
-      - name: Build project
+      - name: Test
         if: matrix.scala == '3'
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' shared/test test/test
+
+      - name: Check binary compatibility
+        if: '!(matrix.scala == ''3'')'
+        run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' mimaReportBinaryIssues
+
+      - name: Generate API documentation
+        if: '!(matrix.scala == ''3'')'
+        run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' doc
 
       - name: Make target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
@@ -270,13 +274,13 @@ jobs:
 
       - run: scala-steward validate-repo-config .scala-steward.conf
 
-  avro-legacy:
-    name: Test with legacy avro
+  coverage:
+    name: Test coverage
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.12]
-        java: [corretto@11]
+        scala: [2.13]
+        java: [corretto@17]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -297,20 +301,40 @@ jobs:
         if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
         run: sbt +update
 
-      - name: Setup Java (corretto@11)
-        id: setup-java-corretto-11
-        if: matrix.java == 'corretto@11'
+      - name: Test coverage
+        run: sbt '++ ${{ matrix.scala }}' coverage test coverageAggregate
+
+      - name: Upload coverage report
+        run: 'bash <(curl -s https://codecov.io/bash)'
+
+  avro-legacy:
+    name: Test with legacy avro
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        scala: [2.13]
+        java: [corretto@17]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout current branch (full)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Java (corretto@17)
+        id: setup-java-corretto-17
+        if: matrix.java == 'corretto@17'
         uses: actions/setup-java@v3
         with:
           distribution: corretto
-          java-version: 11
+          java-version: 17
           cache: sbt
 
       - name: sbt update
-        if: matrix.java == 'corretto@11' && steps.setup-java-corretto-11.outputs.cache-hit == 'false'
+        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
         run: sbt +update
 
-      - name: Build project
+      - name: Test
         env:
           JAVA_OPTS: '-Davro.version=1.8.2'
         run: sbt '++ ${{ matrix.scala }}' avro/test
