--- a/.github/workflows/publish-gh-site.yml
+++ b/.github/workflows/publish-gh-site.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Publish site
         # if: startsWith(github.ref, 'refs/tags/v')
-        env:
+        uses: peaceiris/actions-gh-pages@v3.9.3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: site/target
           keep_files: true
-        uses: peaceiris/actions-gh-pages@v3.9.3
