--- a/.github/workflows/publish-gh-site.yml
+++ b/.github/workflows/publish-gh-site.yml
@@ -43,5 +43,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.9.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: site/target
+          publish_dir: site/target/site
           keep_files: true
