Pin protobuf version to v3
Tensorflow module does not support v4 yet

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,10 +1,14 @@
 updates.ignore = [
   { groupId = "org.apache.avro" }, # we test with multiple avro versions
-  { groupId = "org.neo4j.driver" } # v5 only supports java 17
 ]
 
 updates.pin  = [
-  { groupId = "org.scala-lang", artifactId="scala3-library", version = "3.3." } # stay on LTS
+  # neo4j 5+ driver are released for java 17+
+  { groupId = "org.neo4j.driver", version = "4." },
+  # tensorflow is not compatible with protobuf v4
+  { groupId = "com.google.protobuf", artifactId ="protobuf-java", version = "3." },
+  # stay on LTS
+  { groupId = "org.scala-lang", artifactId="scala3-library", version = "3.3." }
 ]
 
 dependencyOverrides = [
