--- a/.github/workflows/scalafix.yaml
+++ b/.github/workflows/scalafix.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   scalafix:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 60
     steps:
       - name: Checkout current branch (full)
@@ -27,7 +27,7 @@ jobs:
 
       - name: Setup Java (corretto@11)
         id: setup-java-corretto-11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: corretto
           java-version: 11
